<resources>
    <string name="app_name">WłosApp</string>

    <string name="test_name">Rozpocznij test</string>
    <string name="test_description">Odpowiedz na 10 pytań i sprawdź porowatość swoich włosów</string>
    <string name="open"></string>
    <string name="close"></string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Hair settings preferences-->
    <string name="greasy">przetłuszczanie</string>
    <string name="dandruff">łupież</string>
    <string name="psoriasis">łuszczyca</string>
    <string name="high_porosity">wysokoporowate</string>
    <string name="medium_porosity">średnioporowate</string>
    <string name="low_porosity">niskoporowate</string>
    <string name="Hair">Włosy</string>
    <string name="Head_skin">Skóra głowy</string>
    <string name="no_plan_text">Wybierz rodzaj pielęgnacji włosów by zobaczyć plan.</string>
    <string name="plan">Plan</string>
    <string name="checking_text">Sprawdzam...</string>
    <string name="actual_care_plan_text">Aktywny plan pielęgnacji</string>
    <string name="additional_care_plan_text">Dodatkowy cel pielęgnacji:</string>
    <string name="question">Jak oceniasz porowatość swoich włosów ?</string>
    <string name="question_description">Jak oceniasz porowatość swoich włosów ?</string>
    <string name="niedziela">ND</string>
    <string name="sobota">SB</string>
    <string name="piątek">PT</string>
    <string name="czwartek">CZ</string>
    <string name="sroda">SR</string>
    <string name="wtorek">WT</string>
    <string name="poniedziałek">PON</string>
    <string name="proteiny">proteiny</string>
    <string name="emolienty"/>
    <string name="mycie">mycie</string>
    <string name="laminowanie">laminowanie</string>
    <string name="henna">henna</string>
    <string name="olejowanie">olejowanie</string>
    <string name="wcierka">wcierka</string>
    <string name="nawilżanie">nawilżanie</string>
    <string name="hello">Cześć,</string>
    <string name="hair_growing">Zapusczanie włosów</string>
    <string name="produkt">produkt</string>
    <string name="dodaj_zadanie">Dodaj zadanie</string>
    <string name="rodzaj_piel_gnacji">Rodzaj pielęgnacji</string>
    <string name="zob_zdj">Zrób zdjęcie by sprawdzić skład produktu.</string>
    <string name="twoje_dane">Twoje dane</string>
    <string name="wybierz_date">Wybierz datę</string>


</resources>
