<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <PreferenceCategory
            app:title="Włosy"
            android:layout="@layout/settings_tittle"
    >
    <CheckBoxPreference
            android:id="@+id/pref_niskoporowate"
            android:title="niskoporowate"
            android:key="niskoporowate"
    />
        <CheckBoxPreference
                android:id="@+id/pref_wysokoporowate"
                android:title="wysokoporowate"
                android:key="wysokoporowate"
        />
        <CheckBoxPreference
                android:id="@+id/pref_srednioporowate"
                android:title="średnioporowate"
                android:key="srednioporowate"
        />
    </PreferenceCategory>
    <PreferenceCategory
            app:title="Skóra głowy"
            android:layout="@layout/settings_tittle">
        <SwitchPreference
                android:id="@+id/sw_lusz"
                android:layout="@layout/switch_view"
                android:title="@string/psoriasis"
                android:key="check_box_psoriasis"
                android:defaultValue="false"
        />
        <SwitchPreference
                android:layout="@layout/switch_view"
                android:title="@string/dandruff"
                android:key="check_box_dandruff"
                android:defaultValue="false"

        />
        <SwitchPreference
                android:title="@string/greasy"
                android:key="check_box_greasy"
                android:defaultValue="false"
                android:layout="@layout/switch_view"
        />
    </PreferenceCategory>
    <PreferenceCategory
            app:title="Alergie"
            android:layout="@layout/settings_tittle">

        <SwitchPreferenceCompat
                app:key="switch"
                app:title="switch"/>

    </PreferenceCategory>
</PreferenceScreen>