<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".plans.HairCarePlan"
        android:orientation="vertical"
        android:background="#FFFFFF"
>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@drawable/header_calendar"
    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Wybierz plan pielęgnacji"
                  android:textSize="20dp"
                  android:layout_gravity="bottom"
                  android:padding="10dp"
                  android:layout_marginBottom="10dp"
                  android:layout_marginLeft="20dp"
                  android:textColor="@color/colorAccentYellow"/>

    </LinearLayout>

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="#FFFFFF">
            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    android:layout_marginTop="40dp"
                    app:contentPadding="15dp"
                    android:elevation="2dp"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                >
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:textStyle="bold"
                              android:text="Własny plan"
                              android:textSize="20dp"
                              android:padding="10dp"
                              android:layout_weight="1"/>

                    <CheckBox
                            android:buttonTint="@color/colorBackground"
                            android:backgroundTint="@color/colorBackground"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkbox_custom_plan"
                            android:thumbTint="@color/colorAccentYellow"
                            android:gravity="end"
                            android:padding="10dp"

                    />

                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_marginTop="50dp">


                    <Button android:padding="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="stwórz własny plan"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    android:layout_marginTop="40dp"
                    app:contentPadding="15dp"
                    android:background="#FFFFFF"
                    android:elevation="2dp"

            >


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/actual_care_plan_text"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:shadowRadius="3"
                            android:gravity="top"
                            android:padding="15dp"
                    />
                    <View android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:background="#5B46556E"
                          android:layout_marginBottom="10dp"/>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center">
                        <TextView
                                android:text="@string/low_porosity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv_plan_low_porosity"
                                android:textSize="16sp"

                                android:layout_weight="1"
                        />
                        <CheckBox
                                android:buttonTint="@color/colorBackground"
                                android:backgroundTint="@color/colorBackground"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkbox_low_porosity"
                                android:thumbTint="@color/colorAccentYellow"

                        />


                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                    >
                        <TextView
                                android:text="@string/medium_porosity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv_plan_medium_porosity"
                                android:textSize="16sp"
                                android:layout_weight="1"/>
                        <CheckBox
                                android:buttonTint="@color/colorBackground"
                                android:backgroundTint="@color/colorBackground"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkbox_medium_porosity"

                        />
                    </LinearLayout>

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:gravity="center">
                        <TextView

                                android:text="@string/high_porosity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv_plan_high_porosity"
                                android:textSize="16sp"
                                android:layout_weight="1"/>
                        <CheckBox
                                android:buttonTint="@color/colorBackground"
                                android:backgroundTint="@color/colorBackground"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkbox_high_porosity"
                        />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    android:layout_marginTop="40dp"
                    app:contentPadding="15dp"
                    android:elevation="2dp"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/additional_care_plan_text"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:padding="15dp"/>
                    <View android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:background="#5B46556E"

                          android:layout_marginBottom="10dp"/>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:gravity="center">
                        <TextView
                                android:text="Zapobieganie wypadaniu włosów"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv_plan_volume"
                                android:textSize="16sp"
                                android:layout_weight="1"/>
                        <CheckBox
                                android:checked="false"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/ch_plan_volume"
                                android:buttonTint="@color/colorBackground"
                                android:backgroundTint="@color/colorBackground"
                        />

                    </LinearLayout>

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:gravity="center">
                        <TextView
                                android:text="Przyspiesenie wzrostu włosów"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv_plan_grow"
                                android:textSize="16sp"
                                android:layout_weight="1"/>
                        <CheckBox
                                android:checked="false"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/ch_plan_grow"
                                android:buttonTint="@color/colorBackground"
                                android:backgroundTint="@color/colorBackground"
                        />

                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:gravity="center">
                        <TextView
                                android:text="Zapobieganie przetłuszczaniu się włosów"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv_plan_greasy"
                                android:textSize="16sp"
                                android:layout_weight="1"/>
                        <CheckBox
                                android:checked="false"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/ch_plan_greasy"
                                android:buttonTint="@color/colorBackground"
                                android:backgroundTint="@color/colorBackground"
                        />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>